syntax = "proto3";

option csharp_namespace = "AuthServiceProvider.Protos";

package auth;

service AuthService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string role = 5;
}

message CreateUserResponse {
  bool success = 1;
  string message = 2;
  string user_id = 3;
}

